# SQUiD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
data/: polynomial_U_17.txt  polynomial_U_65537.txt  polynomial_U_99929.txt  sample.csv  sample.vcf
scripts/: make.sh
src/: CMakeLists.txt  SQUiD.cpp  data_owner_encryptor.cpp  globals.hpp  main.cpp  tests.cpp
src/API/: CMakeLists.txt  main.cc
src/API/controllers/: api_v1_Server.cc  api_v1_Server.h
src/benchmarks/: CMakeLists.txt  main_benchmark.cpp  misc_benchmark.cpp
src/databases/: CMakeLists.txt  FHE_SIMD_DML.cpp  FHE_SIMD_MAF_query.cpp  FHE_SIMD_PRS_query.cpp  FHE_SIMD_counting_query.cpp  FHE_SIMD_ctxt_packing.cpp  FHE_SIMD_database.cpp  FHE_SIMD_database.hpp  FHE_SIMD_range_query.cpp  FHE_SIMD_setup.cpp  FHE_SIMD_similarity_query.cpp  FHE_database.hpp  FHE_disk_database.cpp  FHE_disk_database.hpp  aes_plaintext_database.cpp  aes_plaintext_database.hpp  comparator.cpp  comparator.hpp  database.hpp  plaintext_database.cpp  plaintext_database.hpp  tools.cpp  tools.hpp
src/tests/: CMakeLists.txt  test_FHE_SIMD_database.cpp  test_FHE_SIMD_database_no_comparator.cpp  test_FHE_disk_database_no_comparator.cpp  test_SQUiD.cpp  test_plaintext_database.cpp
